Fix links on mobile + extra fix for logout

--- a/packages/client/src/components/Shared/PageElements/Header/Header.scss
+++ b/packages/client/src/components/Shared/PageElements/Header/Header.scss
@@ -23,4 +23,16 @@
   .MuiDrawer-paper {
     background: $primary-gradient-bg;
   }
+  .MuiListItem-root {
+    padding: 0;
+    a,
+    button {
+      text-decoration: none;
+      width: 100%;
+      height: 100%;
+    }
+    button {
+      padding: 1rem 2rem;
+    }
+  }
 }
